--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,8 +112,7 @@ jobs:
                         --interactive \
                         --tty \
                         newstash-php-container \
-                            sh -c 'cd Symfony && \
-                                composer install && \
+                            sh -c 'composer install && \
                                 ./bin/phpunit --verbose --debug --coverage-text'
 
 
