--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,7 @@ jobs:
                         --env "AMZN_AFFILIATE=stub-amzn-affil" \
                         newstash-php-container \
                             sh -c 'composer install && \
+                                ./bin/console cache:clear && \
                                 ls -l vendor &&
                                 ls -l vendor/symfony &&
                                 ./bin/phpunit --verbose --debug --coverage-text'
