--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,6 +128,7 @@ jobs:
                         --env "AMZN_AFFILIATE=stub-amzn-affil" \
                         newstash-php-container \
                             sh -c 'composer install && \
+                                SYMFONY_DEPRECATIONS_HELPER=weak \
                                 ./bin/phpunit --verbose --debug --coverage-text'
 
 
