added back weird deploy filter syntax

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,7 +172,13 @@ workflows:
             - test:
                 requires:
                     - build
+                filters:
+                    tags:
+                        only: /.*/
+
             - deploy:
                 requires:
                     - test
-
+                filters:
+                    tags:
+                        only: /.*/
