--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,6 +162,7 @@ jobs:
                     sudo mv /home/circleci/project/tmp/terraform /usr/local/bin
 
             - run:
+                name: terraform init
                 command: |
                     cd terraform && \
                     TF_VAR_aws_access_key="$AWS_ACCESS_KEY_ID" \
@@ -172,6 +173,7 @@ jobs:
                         -backend-config="region=us-east-1"
 
             - run:
+                name: terraform apply
                 command: |
                     cd terraform && \
                     TF_VAR_aws_access_key="$AWS_ACCESS_KEY_ID" \
