--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,5 @@ Symfony/public/img/blog/*
 
 /terraform/credentials.sh
 /terraform/.terraform/
-terraform/terraform.tfstate.*
+/terraform/terraform.tfstate.*
+/terraform/tf.tfvars
