--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,7 +151,7 @@ jobs:
 
             - run:
                 name: Install AWS CLI
-                commaind: |
+                command: |
                     curl -O https://bootstrap.pypa.io/get-pip.py && \
                     python3 get-pip.py --user && \
                     pip3 install awscli --upgrade --user &&
