--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,6 +214,7 @@ jobs:
                 name: terraform apply
                 command: |
                     cd terraform && \
+                    TF_VAR_app_version="$CIRCLE_TAG" \
                     TF_VAR_aws_access_key="$AWS_ACCESS_KEY_ID" \
                     TF_VAR_aws_secret_key="$AWS_SECRET_ACCESS_KEY" \
                     TF_VAR_environment="prod" \
