--- a/data/conf.d/server.cnf
+++ b/data/conf.d/server.cnf
@@ -2,12 +2,11 @@
 [mysqld]
 
 default_authentication_plugin=mysql_native_password
-expire_logs_days = 1
+
+binlog_expire_logs_seconds = 86400
 
 log_bin = /var/lib/mysql-binlogs/binlog
 
 # this buffers log writes for performance
 innodb_flush_log_at_trx_commit = 2
 
-# disable log bin for now
-skip-log-bin
