nearly prod ready

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -8,7 +8,7 @@ COPY docker/nginx/error/ /etc/nginx/error/
 
 RUN mkdir -p /var/www/html/phpapp && \
     chmod -R 777 /var/www/html
-COPY Symfony /var/www/html/phpapp/
+COPY Symfony /var/www/html/phpapp/Symfony
 
 # Run
 COPY docker/nginx/run.sh /var/run/run.sh
