--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -21,12 +21,15 @@
         "symfony/asset": "^4.0",
         "symfony/browser-kit": "^4.0",
         "symfony/console": "^4.0",
+        "symfony/filesystem": "^4.0",
+        "symfony/finder": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.0",
         "symfony/orm-pack": "^1.0",
         "symfony/phpunit-bridge": "^4.0",
+        "symfony/process": "^4.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/serializer-pack": "^1.0",
         "symfony/swiftmailer-bundle": "^3.2",
