--- a/Symfony/config/services_test.yaml
+++ b/Symfony/config/services_test.yaml
@@ -29,3 +29,4 @@ services:
     test.App\Service\ReviewLikeManager: '@App\Service\ReviewLikeManager'
     test.App\Service\ReviewManager: '@App\Service\ReviewManager'
     test.App\Service\ScoreManager: '@App\Service\ScoreManager'
+    test.App\Service\SitemapGenerator: '@App\Service\SitemapGenerator'
