fix for url generation

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,3 +1,7 @@
+map $http_cloudfront_forwarded_proto $cloudfront_proto {
+    default "http";
+    https "https";
+}
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
@@ -124,6 +128,9 @@ server {
         fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
+
+        # force https
+        proxy_set_header X-Forwarded-Proto $cloudfront_proto;
 
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
