another attempt to force https and some icons

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,7 +1,9 @@
-map $http_cloudfront_forwarded_proto $cloudfront_proto {
-    default "http";
-    https "https";
+
+map $http_x_forwarded_proto $fastcgi_param_https_variable {
+    default '';
+    https 'on';
 }
+
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
@@ -129,9 +131,6 @@ server {
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
 
-        # force https
-        proxy_set_header X-Forwarded-Proto $cloudfront_proto;
-
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
 
@@ -153,7 +152,7 @@ server {
 
         # Params (removed duplicates already found in [fastcgi_params] left those which are modified)
         include /etc/nginx/fastcgi_params;
-        fastcgi_param HTTPS              $fastcgi_https;
+        fastcgi_param HTTPS              $fastcgi_param_https_variable;
         fastcgi_param SCRIPT_FILENAME    $document_root$fastcgi_script_name;
 
         internal;
