possible fix for https

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,9 +1,4 @@
 
-map $http_x_forwarded_proto $fastcgi_param_https_variable {
-    default '';
-    https 'on';
-}
-
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
@@ -127,9 +122,13 @@ server {
     }
 
     location ~ ^/index\.php(/|$) {
+
         fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
+
+        fastcgi_param HTTP_X_FORWARDED_PROTO https;
+        fastcgi_param HTTPS on;
 
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
@@ -152,7 +151,6 @@ server {
 
         # Params (removed duplicates already found in [fastcgi_params] left those which are modified)
         include /etc/nginx/fastcgi_params;
-        fastcgi_param HTTPS              $fastcgi_param_https_variable;
         fastcgi_param SCRIPT_FILENAME    $document_root$fastcgi_script_name;
 
         internal;
