--- a/Symfony/config/packages/security.yaml
+++ b/Symfony/config/packages/security.yaml
@@ -43,6 +43,6 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/admin, role: ROLE_ADMIN }
         - { path: ^/user/, role: ROLE_USER }
         - { path: ^/blog/comment/, role: ROLE_USER }
