old dns record redirect

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,3 +1,10 @@
+server {
+    listen 80;
+    listen [::]:80;
+
+    server_name bookstash.scott.to;
+    return 301 https://booksto.love;
+}
 
 server {
     listen 80 default_server;
