--- a/Symfony/package.json
+++ b/Symfony/package.json
@@ -1,6 +1,10 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.22.0",
+        "@babel/preset-react": "^7.0.0",
+        "@symfony/webpack-encore": "^0.24.0",
+        "babel-preset-react": "^6.24.1",
+        "prop-types": "^15.7.2",
+        "react": "^16.8.4",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -28,6 +32,9 @@
         "package": "^1.0.1",
         "pickadate": "^3.5.6",
         "raty-js": "^2.9.0",
+        "react-dom": "^16.8.4",
+        "react-on-rails": "^11.2.2",
+        "react-transition-group": "^2.6.1",
         "sass-loader": "^7.0.1",
         "script-loader": "^0.7.2",
         "timeago": "^1.6.4"
