--- a/Symfony/package.json
+++ b/Symfony/package.json
@@ -12,6 +12,7 @@
     "scripts": {
         "dev-server": "encore dev-server",
         "dev": "encore dev",
+        "webpack-serverside": "encore dev --config webpack.config.serverside.js --watch",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
     },
@@ -33,7 +34,9 @@
         "pickadate": "^3.5.6",
         "raty-js": "^2.9.0",
         "react-dom": "^16.8.4",
+        "react-helmet": "^5.2.0",
         "react-on-rails": "^11.2.2",
+        "react-router-dom": "^5.0.0",
         "react-transition-group": "^2.6.1",
         "sass-loader": "^7.0.1",
         "script-loader": "^0.7.2",
