--- a/Symfony/package.json
+++ b/Symfony/package.json
@@ -17,6 +17,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.4.0",
+        "@babel/preset-es2015": "^7.0.0-beta.53",
+        "@material-ui/core": "^3.9.2",
         "devbridge-autocomplete": "^1.4.10",
         "expose-loader": "^0.7.5",
         "fs": "^0.0.1-security",
