--- a/Symfony/package.json
+++ b/Symfony/package.json
@@ -20,6 +20,7 @@
         "@babel/plugin-proposal-class-properties": "^7.4.0",
         "@babel/preset-es2015": "^7.0.0-beta.53",
         "@material-ui/core": "^3.9.2",
+        "@material-ui/icons": "^3.0.2",
         "devbridge-autocomplete": "^1.4.10",
         "expose-loader": "^0.7.5",
         "fs": "^0.0.1-security",
