--- a/Symfony/package.json
+++ b/Symfony/package.json
@@ -21,6 +21,7 @@
         "@babel/preset-es2015": "^7.0.0-beta.53",
         "@material-ui/core": "^3.9.2",
         "@material-ui/icons": "^3.0.2",
+        "autosuggest-highlight": "^3.1.1",
         "devbridge-autocomplete": "^1.4.10",
         "expose-loader": "^0.7.5",
         "fs": "^0.0.1-security",
@@ -30,6 +31,7 @@
         "jquery-visible": "^1.2.0",
         "less": "^3.9.0",
         "less-loader": "^4.1.0",
+        "lodash": "^4.17.11",
         "masonry-desandro": "^3.3.2",
         "modernizr": "^3.6.0",
         "modernizr-loader": "^1.0.1",
@@ -37,6 +39,7 @@
         "package": "^1.0.1",
         "pickadate": "^3.5.6",
         "raty-js": "^2.9.0",
+        "react-autosuggest": "^9.4.3",
         "react-dom": "^16.8.4",
         "react-helmet": "^5.2.0",
         "react-on-rails": "^11.2.2",
