--- a/Symfony/package.json
+++ b/Symfony/package.json
@@ -42,6 +42,7 @@
         "react-autosuggest": "^9.4.3",
         "react-dom": "^16.8.4",
         "react-helmet": "^5.2.0",
+        "react-masonry-layout": "^0.4.0",
         "react-on-rails": "^11.2.2",
         "react-router-dom": "^5.0.0",
         "react-transition-group": "^2.6.1",
