--- a/Symfony/package.json
+++ b/Symfony/package.json
@@ -38,6 +38,7 @@
         "node-sass": "^4.11.0",
         "package": "^1.0.1",
         "pickadate": "^3.5.6",
+        "query-string": "^6.4.2",
         "raty-js": "^2.9.0",
         "react-autosuggest": "^9.4.3",
         "react-dom": "^16.8.4",
