--- a/Symfony/package.json
+++ b/Symfony/package.json
@@ -40,6 +40,7 @@
         "pickadate": "^3.5.6",
         "query-string": "^6.4.2",
         "raty-js": "^2.9.0",
+        "raw-loader": "^2.0.0",
         "react-autosuggest": "^9.4.3",
         "react-dom": "^16.8.4",
         "react-helmet": "^5.2.0",
